fix up cron screen css a little - make it consistent with other screens. need to set an explicit width for the enabled column otherwise you dont get the buttons (the other columns take up too much)
git-svn-id: http://public-cvs.squiz.net/svn/squiz-framework@688 1b08cf3a-d8dc-418b-9366-0d0b919357ef

--- a/Systems/Cron/Web/Templates/CronScreen.css
+++ b/Systems/Cron/Web/Templates/CronScreen.css
@@ -1,5 +1,10 @@
 #CronScreen {
-    margin: 0 50px;
+    margin:0 auto;
+    width:1160px;
+}
+
+#CronScreen .th-enabled {
+    width: 100px;
 }
 
 #CronScreen .col-job em {
